# ucx-fault-injector

./: .gitignore  Cargo.toml  README.md  build.rs  justfile  test_fault_demo.sh  wrapper.h
.github/workflows/: ci.yml  release.yml
src/: client.rs  commands.rs  init.rs  intercept.rs  lib.rs  recorder.rs  shared_state.rs  state.rs  strategy.rs  subscriber.rs  tests.rs  ucx.rs
ucx-fault-injector-macros/: Cargo.toml
ucx-fault-injector-macros/src/: lib.rs
ucx-fault-injector-rs/: .pre-commit-config.yaml  Cargo.toml  README.md  build.rs  test_fault_demo.sh
ucx-fault-injector-rs/src/: atomic_utils.rs  client.rs  function_ptr.rs  init.rs  intercept.rs  lib.rs  recorder.rs  state.rs  subscriber.rs  tests.rs  types.rs  ucx.rs
ucx-fault-injector-rs/src/fault/: mod.rs  strategy.rs
ucx-fault-injector-rs/src/interception/: intercept.rs  mod.rs  symbol_lookup.rs
ucx-fault-injector-rs/src/ipc/: commands.rs  mod.rs  subscriber.rs
ucx-fault-injector-rs/src/state/: local.rs  mod.rs  shared.rs
