[package]
name = "ucx-fault-injector"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "ucx-fault-client"
path = "src/client.rs"

[dependencies]
libc = "0.2"
once_cell = "1.19"
nix = { version = "0.29", features = ["signal", "fs"] }
ctor = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zmq = "0.10"
shared_memory = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
bindgen = "0.70"
pkg-config = "0.3"
