[workspace]
resolver = "2"
members = [
    "ucx-fault-injector-rs",
    "ucx-fault-injector-macros",
]

[workspace.package]
version = "0.2.4"
edition = "2021"

[workspace.dependencies]
# shared dependencies
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

# proc macro dependencies
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
