[package]
name = "ucx-fault-injector"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "ucx-fault-client"
path = "src/client.rs"

[dependencies]
ucx-fault-injector-macros = { path = "../ucx-fault-injector-macros" }
libc = "0.2"
once_cell = "1.19"
nix = { version = "0.29", features = ["signal", "fs", "mman"] }
ctor = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
notify = "6.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
scopeguard = "1.2"
glob = "0.3"
comfy-table = "7.1"
tokio = { version = "1.0", features = ["rt-multi-thread", "sync", "time", "net", "macros", "io-util"] }
futures = "0.3"
fastrand = "2.3"

[build-dependencies]
bindgen = "0.70"
pkg-config = "0.3"
vergen-git2 = { version = "1.0", features = ["build", "cargo"] }
